# QMethodUtilities

./: README.md  setup
Simulation/: CMakeLists.txt  Makefile
Simulation/.cache/clangd/index/: AnalysisModuleBase.cu.F7B345B615114B16.idx  AnalysisModuleBase.h.E6EBA730492E16FA.idx  AnalysisModuleList.h.15A5601FE79ADF38.idx  AnalyzerRegistration.cu.0D1FA1C63081F2E9.idx  EnergyHistogramModule.cu.7E8DF97B3AC10682.idx  EnergyHistogramModule.h.C13D9DDE72E3DA23.idx  FFTAnalysisModule.cu.CFE36DC8E880F51A.idx  FFTAnalysisModule.h.37DDBB0CC214E17A.idx  Global.h.ECB21D4FC8B71F85.idx  QSim.cu.03CDD0A35BE7D349.idx  QSim.h.B46DE4E6D2F7FCF8.idx  QSimulation.cpp.67B48069286912E6.idx  RHAnalysisModule.cu.28926C40F54F0BC1.idx  RHAnalysisModule.h.F7AB8867D28A51EF.idx  RPAnalysisModule.cu.D5139EC8F15D3999.idx  RPAnalysisModule.h.E1A5736FB48C768E.idx  TruthAnalysisModule.cu.E0A5A529E78F015C.idx  TruthAnalysisModule.h.99B96D9E01EDD039.idx  Util.h.8B643A86A4316737.idx  helper_cuda.h.9BEAF75B0B706A6E.idx  helper_string.h.D683B2D280BF91D2.idx  json.hpp.7A577583DE8AB279.idx
Simulation/AnalysisModule/include/: AnalysisModuleBase.h  AnalysisModuleList.h  RHAnalysisModule.h
Simulation/AnalysisModule/src/: RHAnalysisModule.cu
Simulation/SimModule/src/: AnalyzerRegistration.cu  QSim.cu
Simulation/Utility/include/: Util.h
Simulation/include/: AnalysisModuleBase.h  AnalysisModuleList.h  EnergyHistogramModule.h  FFTAnalysisModule.h  Global.h  QSim.h  RHAnalysisModule.h  RPAnalysisModule.h  TruthAnalysisModule.h  Util.h
Simulation/input/: EnergyHistTest.json  EnergyHist_wc_-1.0elab.json  EnergyHist_wc_1.0elab.json  EnergyHist_wc_2.0elab.json  EnergyHist_wc_4.0elab.json  FFT_ADCHist_elab-1.0.json  FFT_ADCHist_elab-1.0_local.json  FFT_ADCHist_elab2.0.json  FFT_ADCHist_elab2.0_local.json  FFT_TruthConfig.json  Flat.json  Flat_10.json  RP_TruthConfig.json  SimConfig.json
Simulation/program/include/: Global.h
Simulation/program/src/: QSimulation.cpp
Simulation/src/: AnalysisModuleBase.cu  AnalyzerRegistration.cu  EnergyHistogramModule.cu  FFTAnalysisModule.cu  QSim.cu  QSimulation.cpp  RHAnalysisModule.cu  RPAnalysisModule.cu  TruthAnalysisModule.cu
Simulation/templates/: CMakeLists.txt  PedTemplate.root  template0.root  template1.root  template10.root  template11.root  template12.root  template13.root  template14.root  template15.root  template16.root  template17.root  template18.root  template19.root  template2.root  template20.root  template21.root  template22.root  template23.root  template24.root  template25.root  template26.root  template27.root  template28.root  template29.root  template3.root  template30.root  template31.root  template32.root  template33.root  template34.root  template35.root  template36.root  template37.root  template38.root  template39.root  template4.root  template40.root  template41.root  template42.root  (+16 more)
include/: QMethodStructs.hh
python/: QEventInspection.py  QHistAnalysis.py  QJobInspection.py  Study_FieldVariation.py
root/: QEventDataAccess.C  QFit.C  QHistBuilder.C  QJobDataAccess.C
